fix button text vertical alignment

--- a/web/app/style/global.less
+++ b/web/app/style/global.less
@@ -42,9 +42,9 @@ input {
 .button {
   width: 210px;
   height: 40px;
-  line-height: 22px;
   font-size: 16px;
   border: none;
+  padding: 0;
   display: inline-block;
   text-align: center;
   line-height: 40px;
